fixed font size on mobile nad reduced padding for title

--- a/src/ui/screens/messaging/pages/scene-selector/SceneSelector.module.css
+++ b/src/ui/screens/messaging/pages/scene-selector/SceneSelector.module.css
@@ -383,11 +383,11 @@
 
 @media (max-width: 767px) {
   .page1 {
-    padding: 20px 16px 32px;
+    padding: 4px 16px 4px;
   }
 
   .header {
-    font-size: 26px;
+    font-size: 1.5rem;
   }
 
   .scenesList {
